# AME2020Python

./: README.md  pyproject.toml
src/ame2020/: __init__.py  core.py  isomers.py  nubase_parser.py  parser.py
src/ame2020/data/: mass.mas20
tests/: test_ame2020.py  test_isomers.py
