[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ame2020"
version = "0.1.0"
description = "Lookup isotope masses, mass excess, and binding energies from the AME2020 atomic mass evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SaikumarChinthakayala" }
]
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ame2020 = ["data/*.mas20"]
